# music-player

./: Cargo.toml  README.md
src/: file_ops.rs  main.rs
src/app/: mod.rs
src/commands/: mod.rs
src/config/: mod.rs
src/handler/: event.rs
src/music/: mod.rs
src/utils/: mod.rs  split_path.rs
src/view/: color.rs  display.rs  mod.rs  music_info.rs  music_list.rs  play_music_list.rs  playing_music.rs
