[package]
name = "music-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.15"
exitfailure = "0.5.1"
dirs = "4.0.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
crossterm = "0.22.1"
tui = "0.17.0"