[package]
name = "music-player"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["xiaohui <https://github.com/mouxiaohui>"]
description = "Terminal music player written in Rust language."
repository = "https://github.com/mouxiaohui/music-player"
readme = "README.md"
keywords = ["terminal", "tui", "music"]

[[bin]]
name = "music_player"
path = "src/main.rs"

[dependencies]
rodio = "0.15"
audiotags = "0.2"
mp3-duration = "0.1.10"
exitfailure = "0.5.1"
dirs = "4.0.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
crossterm = "0.22.1"
tui = "0.17.0"
infer = "0.6.0"
regex = "1.5"
lazy_static = "1.4.0"
rand = "0.8"